test_scores/negative_dimers/features/Q03113.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q03113.pkl.xz